- backend - uso de topics do ntfy pra notificações
